# ewtwitterbot

./: .gitignore  README.md  last_tweet.txt  pyproject.toml  pytest.ini  setup.cfg  test_ewbot_clientcred.secret  test_ewbot_usercred.secret
.github/workflows/: ci.yml
ewtwitterbot/: imagery.py  mastodon_bot.py  quote_service.py  status_processing.py  twitter_bot.py
ewtwitterbot/fonts/Raleway/: OFL.txt
tests/: test_image_generation.py  test_mastodon_bot.py  test_quote_service.py  test_status_processing.py  test_twitter_bot.py
